--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_datetime_picker: ^1.5.1
+  intl: ^0.18.0
 
 
   # The following adds the Cupertino Icons font to your application.
