--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.0.11
   hive_flutter: ^1.1.0
   hive: ^2.2.3
+  flutter_sticky_header: ^0.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
